# codex-android

./: .gitignore  .gitmodules  .replit  AGENTS.md  ANDROID_RUNBOOK.md  CODEX_INTEGRATION_PLAN.md  LICENSE  README(E).md  README.md  build.gradle.kts  chinese_strings_detailed.txt  gradle.properties  local.properties.example  package-lock.json  package.json  packages_whitelist.txt  replit.nix  settings.gradle.kts  sync_example_packages.py
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  android-release-signing.md  codex-binary-runtime.md  github-workflow-push-scope.md  headless-browser-in-sandbox.md  security-level-tiers.md  web-chat-first-screen-chunks.md  web-chat-first-screen-perf.md  web-chat-themes.md
.agents/plugins/: marketplace.json
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: build-apk.yml  web-chat-first-screen.yml
app/: build.gradle.kts  proguard-rules.pro
app/objectbox-models/: default.json  default.json.bak
docs/: BUILDING.md  CONTRIBUTING.md  JAVA_BRIDGE_INTERFACE.md  RENDERER_ARCH.md  SCRIPT_DEV_GUIDE.md  SCRIPT_DEV_SKILL.md  TOOLPKG_FORMAT_GUIDE.md  chat_import_markdown.md  chat_import_markdown_example.md  chat_runtime_foreground_service_plan.md  external_http_chat.md  external_intent_chat.md  memory_candidate_scoring_formula.md  tool_permissions.md  tool_stream_reconcile_plan.md  toolcall_xml_conversion.md  toolpkg_probe_timing_breakdown.md  workflow_intent_trigger.md
docs/package_dev/: android.md  chat.md  core.md  cryptojs.md  ffmpeg.md  files.md  index.md  jimp.md  memory.md  network.md  okhttp.md  software_settings.md  tasker.md  toolpkg.md  ui.md  workflow.md
dragonbones/: README.md  build.gradle.kts
dragonbones/cpp/: JniBridge.cpp  JniBridge.h
examples/: .env.local.example  12306.js  12306.ts  README.md  ai_chat.js  ai_chat.ts  automatic_baidu_map_assistant.js  automatic_baidu_map_assistant.ts  automatic_bilibili_assistant.js  automatic_bilibili_assistant.ts  automatic_ui_base.ts  automatic_ui_subagent.js  automatic_ui_subagent.ts  automatic_xiaohongshu_assistant.js  automatic_xiaohongshu_assistant.ts  baidu_map.js  baidu_map.ts  beeimg_image_uploader.js  beeimg_image_uploader.ts  bilibili_tools.js  bilibili_tools.ts  browser.js  browser.ts  code_runner.js  code_runner.ts  crossref.js  crossref.ts  daily_life.js  daily_life.ts  douyin_download.js  douyin_download.ts  duckduckgo.ts  extended_chat.js  extended_chat.ts  extended_file_tools.js  extended_file_tools.ts  extended_http_tools.ts  extended_memory_tools.js  extended_memory_tools.ts  ffmpeg.ts  (+42 more)
examples/apktool/: .gitignore  build_runtime_android_resources.ps1  manifest.json
examples/context_limiter_c/: manifest.json
examples/custom_ai_provider/: README.md  manifest.json
examples/debug_msg_dump/: manifest.json
examples/deepsearching/: manifest.json
examples/desktop_widget_demo/: manifest.json
examples/dino_runner/: manifest.json
examples/linux_ssh/: manifest.json
examples/message_insert/: manifest.json
examples/plan_mode/: manifest.json
examples/qqbot/: manifest.json
examples/remote_operit/: manifest.json
examples/sidebar_account_book/: manifest.json
examples/sidebar_bing_action/: manifest.json
examples/sidebar_model_sites/: manifest.json  tsconfig.json
examples/sidebar_opencode/: manifest.json
examples/sidebar_sillytavern/: manifest.json
examples/subagent/: manifest.json
examples/template_try/: manifest.json
examples/thinking_guidance/: manifest.json  tsconfig.json
examples/types/: chat.d.ts  compose-dsl.d.ts  compose-dsl.material3.generated.d.ts  core.d.ts  ffmpeg.d.ts  files.d.ts  index.d.ts  java-bridge.d.ts  material-icons.d.ts  memory.d.ts  network.d.ts  okhttp.d.ts  quickjs-runtime.d.ts  tasker.d.ts  toolpkg.d.ts  workflow.d.ts
examples/worldbook/: manifest.json  tsconfig.json  tsconfig.tests.json
fbx/: CMakeLists.txt  build.gradle.kts
fbx/src/main/cpp/: fbx_jni.cpp
fbx/src/main/java/com/ai/assistance/fbx/: FbxGlSurfaceView.kt  FbxInspector.kt  FbxLibraryLoader.kt  FbxNative.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: CMakeLists.txt  build.gradle.kts
llama/src/main/cpp/: llama_jni_stub.cpp
llama/src/main/java/com/ai/assistance/llama/: LlamaLibraryLoader.kt  LlamaNative.kt  LlamaSession.kt
mmd/: CMakeLists.txt  UPSTREAM_SABA_VIEWER_MAPPING.md  build.gradle.kts
mmd/src/main/: AndroidManifest.xml
mmd/src/main/assets/Saba/Viewer/resource/shader/: grid.frag  grid.vert  mmd.frag  mmd.vert  mmd_edge.frag  mmd_edge.vert  mmd_ground_shadow.frag  mmd_ground_shadow.vert  shadow_shader.frag
mmd/src/main/cpp/Saba/GL/: GLObject.h  GLSLUtil.cpp  GLShaderUtil.cpp  GLShaderUtil.h  GLTextureUtil.cpp  GLVertexUtil.h
mmd/src/main/cpp/Saba/GL/Model/MMD/: GLMMDModel.cpp  GLMMDModelDrawer.cpp
mmd/src/main/cpp/Saba/Viewer/: Grid.cpp  ShadowMap.cpp  Viewer.cpp  Viewer.h  ViewerContext.cpp
mmd/src/main/cpp/android/: AndroidAssetSupport.cpp  AndroidAssetSupport.h  MmdInspectorBridge.cpp  MmdRendererBridge.cpp
mmd/src/main/java/com/ai/assistance/mmd/: MmdGlSurfaceView.kt  MmdInspector.kt  MmdLibraryLoader.kt  MmdNative.kt
mnn/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
quickjs/: build.gradle.kts
scripts/: post-merge.sh
showerclient/: .gitignore  README.md  build.gradle.kts
tools/: COMPOSE_DSL_DEBUG_README.md  JS_ADB_README.md  JS_ADB_README_zh.md  build_server.bat  debug_toolpkg.bat  debug_toolpkg.py  debug_toolpkg.sh  dump_current_compose_dsl_ui.bat  execute_js.bat  execute_js.sh  execute_js_dir.bat  execute_js_dir.sh  run_sandbox_script.bat  run_sandbox_script.sh  run_shower_server.bat  sandboxpackage_dev_install_or_update.js  shower_ws_client.py  toolpkg_hook_runner.js
tools/compose_dsl/: README.md  generate_compose_dsl_artifacts.py
tools/desktop/: settings.gradle.kts
tools/ffmpeg/: build_ffmpeg_kit_wsl.sh  import_local_ffmpeg_kit.ps1
tools/shell_identity_launcher/: CMakeLists.txt  build_android.bat  native-lib.cpp  push_android.bat
web-chat/: index.html  package-lock.json  package.json  vite.config.ts
(+762 files in other folders)
